...
        <item quantity="one">%1$s peso</item>
        <item quantity="other">%1$s pesos</item>
    </plurals>
    <string name="money_other_currency">%1$s %2$s</string>
    <string name="money_negative">menos %1$s</string>
    <string name="money_positive">más %1$s</string>
    <string name="month_title">%1$s %2$d</string>
    <string-array name="month_names">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
...
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dic</item>
    </string-array>
    <string name="month_picker_open">Cambiar de mes. Mes actual: %1$s</string>
    <string name="month_picker_previous_year">Año anterior</string>
    <string name="month_picker_next_year">Año siguiente</string>
    <string name="month_picker_title">Elige un mes</string>
    <string name="recibo_first_run_title">Tu recibo está en blanco</string>
    <string name="recibo_first_run_body">Tres pasos y queda listo: crea tus categorías, ponle un límite a cada una y anota tu primer gasto.</string>
    <string name="recibo_create_categories">Crear categorías</string>
    <string name="recibo_add_category">Agregar categoría</string>
    <string name="recibo_limit_unlimited">Sin límite</string>
    <string name="recibo_limit_paused">En pausa</string>
    <string name="recibo_limit_not_set">Sin configurar</string>
...
