...
    }
}

const val RECIBO_CATEGORIES_TAG = "recibo:categories"
const val RECIBO_ADD_CATEGORY_TAG = "recibo:add-category"
const val RECIBO_LOADING_TAG = "recibo:loading"
const val RECIBO_FIRST_RUN_TAG = "recibo:first-run"
const val RECIBO_SPENDING_TAG = "recibo:spending"
const val RECIBO_FAILED_TAG = "recibo:failed"

